--- a/estilos/style.css
+++ b/estilos/style.css
@@ -2,3 +2,21 @@
 Paleta de cores
 Verde: #49a09d
 Lilás: #5f2c82
+*/
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+}
+body, html {
+    width: 100vw;
+    height: 100vh;
+    background-color: #5f2c82;
+}
+main {
+    width: 250px;
+    height: 500px;
+    background-color: white;
+    left: 50%;
+    top: 50%;
+}
