--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,6 +7,7 @@ Lilás: #5f2c82
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 0px;
     margin: 0px;
+    
 }
 body, html {
     width: 100vw;
@@ -14,9 +15,36 @@ body, html {
     background-color: #5f2c82;
 }
 main {
-    width: 250px;
-    height: 500px;
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+}
+section#login {
+    width: 200px;
+    height: 400px;
     background-color: white;
-    left: 50%;
+    position: absolute;
+
     top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    border-radius: 20px 0px 20px 0px;
+
+    overflow: hidden;
+
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.377);
+
+    transition: width 0.4s, height 0.4s;
+    transition-timing-function: ease;
+}
+section#login div#imagem {
+    display: block;
+    background: #5f2c82 url(../imagens/tela02.jpg);
+    height: 200px;
+    background-size: cover;
+}
+section#login div#formulario {
+    display: block;
+    padding: 10px;
 }
