--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,12 +7,13 @@ Lilás: #5f2c82
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 0px;
     margin: 0px;
-    
+    box-sizing: border-box;
 }
 body, html {
     width: 100vw;
     height: 100vh;
     background-color: #5f2c82;
+    overflow:hidden
 }
 main {
     position: relative;
