--- a/estilos/style.css
+++ b/estilos/style.css
@@ -49,3 +49,9 @@ section#login div#formulario {
     display: block;
     padding: 10px;
 }
+div#formulario h1 {
+    padding-bottom: 8px;
+}
+div#formulario p {
+    font-size: 0.7em;
+}
